<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/pano"
                android:layout_width="663dp"
                android:layout_height="187dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/paro"
                />

            <ImageView
                android:id="@+id/fech"
                android:layout_width="37dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/ic_fech"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="4dp" />

            <ImageView
                android:id="@+id/usuariolindo"
                android:layout_width="193dp"
                android:layout_height="165dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/usuariolindo"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/Nombre"
                    android:layout_width="370dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:drawableRight="@drawable/ic_lapiz"
                    android:ems="10"
                    android:fontFamily="@font/sniglet_regular"
                    android:hint="@string/button10"
                    android:inputType="textPersonName"
                    tools:ignore="Autofill,MissingConstraints" />

                <EditText
                    android:id="@+id/Edad"
                    android:layout_width="370dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:drawableRight="@drawable/ic_lapiz"
                    android:ems="10"
                    android:fontFamily="@font/sniglet_regular"
                    android:hint="@string/button6"
                    android:inputType="number"
                    tools:ignore="Autofill,MissingConstraints" />

                <EditText
                    android:id="@+id/Usuario"
                    android:layout_width="370dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:drawableRight="@drawable/ic_lapiz"
                    android:ems="10"
                    android:fontFamily="@font/sniglet_regular"
                    android:hint="@string/button5"
                    android:inputType="text"
                    tools:ignore="MissingConstraints" />

                <Button
                    android:id="@+id/Subirimagen"
                    android:layout_width="248dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="#5AC8EA"
                    android:clickable="true"
                    android:drawableEnd="@drawable/ic_file"
                    android:drawablePadding="25dp"
                    android:fontFamily="@font/sniglet_regular"
                    android:hint="@string/button11"
                    android:textSize="20dp"
                    app:cornerRadius="20dp"
                    tools:ignore="KeyboardInaccessibleWidget,MissingConstraints,MissingPrefix" />

                <EditText
                    android:id="@+id/Número"
                    android:layout_width="370dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:drawableRight="@drawable/ic_lapiz"
                    android:ems="10"
                    android:fontFamily="@font/sniglet_regular"
                    android:hint="@string/button4"
                    android:inputType="phone"
                    tools:ignore="MissingPrefix" />

                <EditText
                    android:id="@+id/documento"
                    android:layout_width="370dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:drawableRight="@drawable/ic_lapiz"
                    android:ems="19"
                    android:fontFamily="@font/sniglet_regular"
                    android:hint="@string/button3"
                    android:inputType="number"
                    tools:ignore="MissingConstraints" />

                <EditText
                    android:id="@+id/Descripción"
                    android:layout_width="370dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:drawableRight="@drawable/ic_lapiz"
                    android:ems="10"
                    android:fontFamily="@font/sniglet_regular"
                    android:hint="@string/button7"
                    android:inputType="text"
                    tools:ignore="MissingConstraints" />

                <EditText
                    android:id="@+id/NombreMascota"
                    android:layout_width="370dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="23dp"
                    android:drawableRight="@drawable/ic_lapiz"
                    android:ems="10"
                    android:fontFamily="@font/sniglet_regular"
                    android:hint="@string/button8"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/RazaMascota"
                    android:layout_width="370dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:drawableRight="@drawable/ic_lapiz"
                    android:ems="10"
                    android:fontFamily="@font/sniglet_regular"
                    android:hint="@string/button9"
                    android:inputType="text"
                    tools:ignore="MissingConstraints" />

                <EditText
                    android:id="@+id/CambiarContraseña"
                    android:layout_width="370dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:drawableRight="@drawable/ic_lapiz"
                    android:ems="10"
                    android:fontFamily="@font/sniglet_regular"
                    android:hint="@string/button12"
                    android:inputType="textPassword"
                    tools:ignore="MissingConstraints" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center">

                    <Button
                        android:id="@+id/Cancelar"
                        android:layout_width="132dp"
                        android:layout_height="49dp"
                        android:layout_marginStart="48dp"
                        android:layout_marginBottom="40dp"
                        android:backgroundTint="#5AC8EA"
                        android:fontFamily="@font/sniglet_regular"
                        android:text="@string/button2"
                        android:textColorLink="#4E6D85"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="1.0"
                        tools:ignore="MissingConstraints" />

                    <Button
                        android:id="@+id/Guardar"
                        android:layout_width="132dp"
                        android:layout_height="49dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="40dp"
                        android:backgroundTint="#5AC8EA"
                        android:fontFamily="@font/sniglet_regular"
                        android:text="@string/button1"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.463"
                        app:layout_constraintStart_toEndOf="@+id/Cancelar"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>